refactor: resolve SonarQube issues in validation-engine module
Fixed multiple SonarQube code quality issues including:

- BLOCKER: Fixed resource leaks in KieSession/KieContainer usage with proper disposal in finally blocks
- BLOCKER: Added assertion to test contextLoads method
- CRITICAL: Handled InterruptedException properly by re-interrupting thread
- CRITICAL: Extracted repeated string literals to constants (drools, default, error, averageExecutionTime, 1.0.0)
- MAJOR: Replaced Stream.collect(Collectors.toList()) with Stream.toList() across all files (Java 16+ optimization)
- BUG: Fixed lock handling to ensure unlock on all execution paths

Changes improved code quality by:
- Preventing resource leaks through proper cleanup
- Following best practices for exception handling
- Reducing code duplication with constants
- Modernizing Java Stream API usage
- Ensuring thread safety with proper lock management

All tests pass successfully after refactoring.